--- a/A-1万円でお買い物.md
+++ b/A-1万円でお買い物.md
@@ -1,28 +1,51 @@
 # A - 1万円でお買い物
 
 ### 問題
+アユタヤ君は1万円のお小遣いを持っています。スーパーに行くと、X円のリンゴが売っていました。
+アユタヤ君はこのリンゴを１０個買うことはできるでしょうか？
+
 
 ### 制約
+* 0<X<=10000
 
 #
 
 ### 入力
-
+入力は以下の形式で標準入力から与えられる。
+```
+X
+```
 
 ### 出力
+アユタヤ君がリンゴを１０個買える場合は　***Yes***　を、買えない場合は　***No***　を出力せよ。
 
 
 #
 
 ### 入力例1
+```
+200
+```
+
 
 ### 出力例1
+```
+Yes
+```
+200円のリンゴを10個買うと合計金額は2000円なので、1万円あれば購入することができます。
 
 #
 
 ### 入力例2
+```
+3500
+```
+
 
 ### 出力例2
-
+```
+No
+```
+3500円のリンゴを10個買うと合計金額は35000円なので、1万円では購入することができません。
 
 #
