--- a/C-1兆円でお買い物.md
+++ b/C-1兆円でお買い物.md
@@ -1,13 +1,22 @@
 # C - 1兆円でお買い物
 
 ### 問題
+アユタヤ君は1兆円のお小遣いを持っています。 
+
+スーパーには2024年4月1日時点で100万円のリンゴが売っています。激しいデフレが発生し、このリンゴは毎日、前日の$`X`$％の値段になります。 
+
+つまり4月2日は(100×$`X`$)円、4月3日は(100×$`X^2`$)円、、、と値下がりしています。 アユタヤ君が4月1日から毎日１個ずつこのリンゴを買っていくと、何日間連続でリンゴを購入することができるでしょうか？
 
 ### 制約
+* 0<$`X`$<1
+* $`X`$は実数
 
 #
 
 ### 入力
-
+```
+X
+```
 
 ### 出力
 
