--- a/C-1兆円でお買い物.md
+++ b/C-1兆円でお買い物.md
@@ -1,17 +1,21 @@
 # C - 1兆円でお買い物
 
 ### 問題
-アユタヤ君は1兆円のお小遣いを持っています。 
+アユタヤ君は1兆円のお小遣いを持っています。
 
-スーパーには2024年4月1日時点で100万円のリンゴが売っています。激しいデフレが発生し、このリンゴは毎日、前日の$`X`$％の値段になります。 
+スーパーには2024年4月1日時点で$`X`$円のリンゴが売っています。今度はデフレが発生し、このリンゴは毎日、前日の0.99999％の値段になります。
 
-つまり4月2日は(100×$`X`$)円、4月3日は(100×$`X^2`$)円、、、と値下がりしています。 アユタヤ君が4月1日から毎日１個ずつこのリンゴを買っていくと、何日間連続でリンゴを購入することができるでしょうか？
+つまり4月2日は($`X`$×0.99999)円、4月3日は(($`X`$×0.99999)×0.99999)円、、、と値下がりしています。 ただし、最安値は1円とし、それ以上値下がりすることはありません。また、小数点以下は切り捨てるものとします。
+
+アユタヤ君が4月1日から毎日１個ずつこのリンゴを買っていくと、何日間連続でリンゴを購入することができるでしょうか？
 
 ### 制約
-* 0<$`X`$<1
-* $`X`$は実数
+* 0<$`X`$<$`10^{12}`$
+* $`X`$は整数
+
 
 #
+
 
 ### 入力
 ```
@@ -19,19 +23,40 @@ X
 ```
 
 ### 出力
+リンゴを連続で買える日数を出力せよ。
 
 
 #
+
 
 ### 入力例1
+```
+100000000
+```
+
 
 ### 出力例1
+```
+10535
+```
+4月1日は100000000円(１億円)、4月2日は(100000000×0.99999)円、4月3日は(100000000×$`0.99999^2`$)円と、リンゴは毎日少しずつ安くなっていきます。
+
+アユタヤ君は10535日連続でリンゴを買うことができます。
+
 
 #
 
+
 ### 入力例2
+```
+10000
+```
+
 
 ### 出力例2
-
+```
+999001473395
+```
+アユタヤ君は999001473395日連続でリンゴを買うことができます。
 
 #
