--- a/B -1億円でお買い物.md
+++ b/B -1億円でお買い物.md
@@ -2,16 +2,18 @@
 
 ### 問題
 アユタヤ君は1億円のお小遣いを持っています。
-スーパーには2024年4月1日時点で100円のリンゴが売っています。激しいインフレが発生し、このリンゴは毎日X円ずつ値上がりします。
-つまり4月2日は(100+X)円、4月3日は(100+2X)円、、、と値上がりしています。
+スーパーには2024年4月1日時点で$`X`$円のリンゴが売っています。激しいインフレが発生し、このリンゴは毎日100円ずつ値上がりします。
+つまり4月2日は(X+100)円、4月3日は((X+100)+100)円、、、と値上がりしています。
 アユタヤ君が4月1日から毎日１個ずつこのリンゴを買っていくと、何日間連続でリンゴを購入することができるでしょうか？
 
 
 ### 制約
-* 0<X<=$`10^8`$
+* 0<$`X`$<=$`10^8`$
 * Xは整数
 
+
 #
+
 
 ### 入力
 入力は以下の形式で標準入力から与えられる。
@@ -32,10 +34,10 @@ X
 
 ### 出力例1
 ```
-4
+9
 ```
-毎日１千万円ずつ値上がりします。りんごの値段は4月1日で100円、4月2日で10000100円、4月3日で20000100円、4月4日で30000100円、4月5日で40000100円です。
-4月4日まで毎日１個ずつリンゴを購入すると、残金は39999600円となります。この残金で4月5日のリンゴは購入できないので、１億円のお小遣いで購入できるのは4日間です。
+毎日100円ずつ値上がりします。りんごの値段は4月1日で10000000円、4月2日で10000100円、4月3日で10000200円、4月4日で10000300円、4月5日で10000400円です。
+4月9日まで毎日１個ずつリンゴを購入すると、残金は9995500円となります。この残金で4月10日のリンゴは購入できないので、１億円のお小遣いで購入できるのは9日間です。
 
 #
 
@@ -48,7 +50,7 @@ X
 
 ### 出力例2
 ```
-1413
+1000000
 ```
 
 #
