--- a/C-1兆円でお買い物.md
+++ b/C-1兆円でお買い物.md
@@ -3,9 +3,9 @@
 ### 問題
 アユタヤ君は1兆円のお小遣いを持っています。
 
-スーパーには2024年4月1日時点で$`X`$円のリンゴが売っています。今度はデフレが発生し、このリンゴは毎日、前日の0.99999％の値段になります。
+スーパーには2024年4月1日時点で$`X`$円のリンゴが売っています。今度はデフレが発生し、このリンゴは毎日、前日の0.99999％の価値になります。
 
-つまり4月2日は($`X`$×0.99999)円、4月3日は(($`X`$×0.99999)×0.99999)円、、、と値下がりしています。 ただし、最安値は1円とし、それ以上値下がりすることはありません。また、小数点以下は切り捨てるものとします。
+つまり4月2日は($`X`$×0.99999)円、4月3日は(($`X`$×0.99999)×0.99999)円、、、と値下がりしています。 ただし、最安値は1円とし、それ以上値下がりすることはありません。また、店頭に表示される金額については、小数点以下は切り捨てるものとします。(例えば、ある日の実際のリンゴの価値が99.9円ならその日のリンゴは99円で販売し、その次の日のリンゴの価値が99.8円ならその日も99円で販売します。)
 
 アユタヤ君が4月1日から毎日１個ずつこのリンゴを買っていくと、何日間連続でリンゴを購入することができるでしょうか？
 
